--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -47,17 +47,12 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Upcoming
 
-- Friday 12 July 2024, noon (EDT)
-	- **Naman Jain**, UC Berkeley
-	- "LiveCodeBench: Holistic and contamination free evaluation of large language models for code"
-	- In this talk we introduce [LiveCodeBench](https://livecodebench.github.io), a comprehensive and contamination-free benchmark for LLMs in code, which continuously collects new problems from LeetCode, AtCoder, and CodeForces. LiveCodeBench evaluates a wide range of capabilities, including self-repair, code execution, and test output prediction. It currently hosts 400 coding problems published between May 2023 and May 2024. We evaluated 18 base LLMs and 34 instruction-tuned LLMs, presenting findings on contamination, performance comparisons, and potential overfitting.
-	- [Naman Jain](https://naman-ntc.github.io) is a CS Ph.D. student at UC Berkeley, focusing on using machine learning to enhance developer productivity tools like program analysis, synthesis, and repair. He also explores how synthesis and verification can improve algorithm generalizability and explainability. He holds an undergraduate degree from IIT Bombay, where he researched NLP robustness and computer vision. Before his Ph.D., he was a predoctoral research fellow at Microsoft Research India, working on program repair, improving large language models, and learning decision trees.
 - Thursday 18 July 2024, noon (EDT)
   - **Hannah Rose Kirk**, Oxford Internet Institute, University of Oxford
   - "What does it mean for AI to be “aligned”?"
   - Alignment has become a buzzword that frequently surfaces throughout the AI ecosystem. But what does it mean to align LLMs to the hundreds of millions of people who now interact with their outputs, each with different preferences for language, conversational norms, value systems, and political beliefs? This talk will explore the gnarly concept of alignment, specifically for large language models (LLMs). Using insights from the recently released [PRISM Alignment Dataset](https://hannahkirk.github.io/prism-alignment/), we'll cover key questions around empirical alignment efforts, such as how to collect human feedback using various scales and signals, where to focus human labour, who to ask for feedback, and whether to target objectives of personalised or collective alignment. Through more comprehensive and representative data, PRISM highlights the challenges of aligning LLMs to meet the diverse expectations and beliefs of a global audience.
   - [Hannah Rose Kirk](https://www.hannahrosekirk.com) is a PhD student at the University of Oxford, UK. Hannah's research centres on the role of granular and diverse human feedback for aligning large language models. Her body of published work spans computational linguistics, computer vision, ethics and sociology, addressing a broad range of issues such as AI safety, bias, fairness, and hate speech from a multidisciplinary perspective. Hannah holds degrees from the University of Oxford, the University of Cambridge and Peking University. Alongside academia, she collaborates often with industry projects at Google, OpenAI and MetaAI, and previously worked as a Data Scientist in the Public Policy Team at The Alan Turing Institute.
-- Friday 19 July 2024, noon (EDT) (in-person and online)
+- Friday 19 July 2024, noon (EDT)
   - **Majeed Kazemitabaar**, University of Toronto
   - "Improving Steering and Verification in AI-Assisted Data Analysis"
   - [Majeed Kazemitabaar](https://www.majeed.cc) is a fourth-year Ph.D. student in Computer Science at the University of Toronto, working with Professor Tovi Grossman. His research in Human-Computer Interaction and Computer Science Education focuses on creating engaging computational learning experiences and has been published in CHI, UIST, and IDC, and earned Best Paper and Best Late-Breaking Work awards.
@@ -96,11 +91,16 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 	- [Crystal Lewis](https://cghlewis.com/) is a freelance consultant and trainer with over 10 years of experience as a data manager in the field of education research. She is also the author of the book *Data Management in Large-Scale Education Research*, which provides a holistic overview of how to manage research data throughout a project life cycle. It is available [freely online](https://datamgmtinedresearch.com/) and a hard copy is [available for purchase](https://www.routledge.com/Data-Management-in-Large-Scale-Education-Research/Lewis/p/book/9781032622798) from Taylor and Francis CRC Press.
 - Friday 22 November 2024, noon (EST)
 	- **Yiqin Fu**, Stanford University
-	- Born and raised in China, [Yiqin](https://yiqinfu.github.io/) Fu spent many of her formative years in the U.S. and the U.K. [Yiqin](https://yiqinfu.github.io/) (pronounced ee-ching) is studying towards a Ph.D. in political science at Stanford University, after having worked as a research associate at Yale Law School's Paul Tsai China Center in New Haven, Connecticut and Beijing, China. She holds a B.A. in Philosophy, Politics, and Economics from the University of Oxford and is broadly interested in innovation, U.S.-China relations, and comparative political and electoral systems.
+	- Born and raised in China, [Yiqin](https://yiqinfu.github.io/) Fu spent many of her formative years in the U.S. and the U.K. Yiqin (pronounced ee-ching) is studying towards a Ph.D. in political science at Stanford University, after having worked as a research associate at Yale Law School's Paul Tsai China Center in New Haven, Connecticut and Beijing, China. She holds a B.A. in Philosophy, Politics, and Economics from the University of Oxford and is broadly interested in innovation, U.S.-China relations, and comparative political and electoral systems.
 
 
 ### Past
 
+- Friday 12 July 2024, noon (EDT)
+	- **Naman Jain**, UC Berkeley
+	- "[LiveCodeBench: Holistic and contamination free evaluation of large language models for code](https://youtu.be/HGqhS9-rnQM)"
+	- In this talk we introduce [LiveCodeBench](https://livecodebench.github.io), a comprehensive and contamination-free benchmark for LLMs in code, which continuously collects new problems from LeetCode, AtCoder, and CodeForces. LiveCodeBench evaluates a wide range of capabilities, including self-repair, code execution, and test output prediction. It currently hosts 400 coding problems published between May 2023 and May 2024. We evaluated 18 base LLMs and 34 instruction-tuned LLMs, presenting findings on contamination, performance comparisons, and potential overfitting.
+	- [Naman Jain](https://naman-ntc.github.io) is a CS Ph.D. student at UC Berkeley, focusing on using machine learning to enhance developer productivity tools like program analysis, synthesis, and repair. He also explores how synthesis and verification can improve algorithm generalizability and explainability. He holds an undergraduate degree from IIT Bombay, where he researched NLP robustness and computer vision. Before his Ph.D., he was a predoctoral research fellow at Microsoft Research India, working on program repair, improving large language models, and learning decision trees.
 - Thursday 11 July 2024, 9am (EDT)
 	- **Terry Yue Zhuo**, Monash University
 	- "[BigCodeBench: Benchmarking Code Generation with Diverse Function Calls and Complex Instructions](https://youtu.be/iTG8XsLFI6s)"
