--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -50,11 +50,10 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 
 - Friday 20 September 2024, noon (EDT)
-	- **Kim Tran**, University of British Columbia
 	- **Sana Shams**, University of British Columbia
 	- **Waris Bhatia**, University of British Columbia
 	- "Accessible Investigative Journalism: Navigating Canada's Largest Corpus of Government Documents"
-	- **Kim** is an undergraduate computer science student and research fellow at the University of British Columbia’s Data Science Institute.  She is passionate about interdisciplinary applications of technology and aims to develop software to create positive social impact. **Sana** is a research fellow through UBC’s Data Science for Social Good Program. She is currently pursuing a BSc in cognitive systems with a minor in data science and is passionate about the intersection of technological development and ethical compliance, particularly in the fields of data science and machine learning. **Waris** is a Data Science Intern with the University of British Columbia’s (UBC) Data Science Institute. He is a senior undergraduate studying Computer Science at UBC. 
+	- **Sana** is a research fellow through UBC's Data Science for Social Good Program. She is currently pursuing a BSc in cognitive systems with a minor in data science and is passionate about the intersection of technological development and ethical compliance, particularly in the fields of data science and machine learning. **Waris** is a Data Science Intern with the University of British Columbia’s (UBC) Data Science Institute. He is a senior undergraduate studying Computer Science at UBC. 
 	- "Open By Default" (OBD) is a dataset from the Investigative Journalism Foundation which is Canada’s largest collection of government documents, comprising over 4.5 million pages of Access To Information and Privacy (ATIP) requests and corresponding government documentation. This project enhanced data capture using optical character recognition (OCR), improved search performance through Large Language Model (LLM) vectorization, and topic modelling to reveal the high-level subject matter represented in the OBD dataset. The final development of the project was a Retrieval Augmented Generation (RAG) LLM pipeline, which enables a chatbot to provide tailored, context-rich responses to user queries, paired with follow-up research directions.
 - Friday 27 September 2024, noon (EDT)
 	- **Annie Collins**, GivingTuesday
@@ -77,8 +76,7 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 	- **Jacob Baldwin**, Pro Football Focus	(PFF)
 	- [Jacob Baldwin](https://www.linkedin.com/in/jacob-baldwin-51849b106/) is a Senior Data Scientist at PFF. He holds an online M.S. degree in Applied Mathematics from the University of Washington, and graduated from Clarkson University with a B.S. in Physics, a B.S. in Applied Mathematics, and a minor in Computer Science.
 - Friday 15 November 2024, noon (EST)
-	- **Crystal Lewis**, Crystal Lewis Consulting LLC
-	- [Crystal Lewis](https://cghlewis.com/) is a freelance consultant and trainer with over 10 years of experience as a data manager in the field of education research. She is also the author of the book *Data Management in Large-Scale Education Research*, which provides a holistic overview of how to manage research data throughout a project life cycle. It is available [freely online](https://datamgmtinedresearch.com/) and a hard copy is [available for purchase](https://www.routledge.com/Data-Management-in-Large-Scale-Education-Research/Lewis/p/book/9781032622798) from Taylor and Francis CRC Press.
+	- TBA
 - Friday 22 November 2024, noon (EST)
 	- **Yiqin Fu**, Stanford University
 	- Born and raised in China, [Yiqin](https://yiqinfu.github.io/) Fu spent many of her formative years in the U.S. and the U.K. Yiqin (pronounced ee-ching) is studying towards a Ph.D. in political science at Stanford University, after having worked as a research associate at Yale Law School's Paul Tsai China Center in New Haven, Connecticut and Beijing, China. She holds a B.A. in Philosophy, Politics, and Economics from the University of Oxford and is broadly interested in innovation, U.S.-China relations, and comparative political and electoral systems.
