Update sean taylor

--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -56,6 +56,8 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 	- [Annie Collins](https://www.linkedin.com/in/annie-a-collins/) is a Data Scientist at GivingTuesday, a US-based nonprofit focused on researching generosity and charitable giving behaviours. Beyond GivingTuesday, Annie has spent several years in data management and research roles within the Canadian nonprofit sector. She holds a Bachelors of Science in applied mathematics and statistics from the University of Toronto, and uses her experience to provide data for the public good and support a more data-driven social sector worldwide.
 - Friday 4 October 2024, noon (EDT)
 	- **Sean Taylor**, Motif
+	- "Casual Discovery for Product Analytics"
+	- I will discuss leveraging causal discovery in product analytics to uncover new insights and improve product development. First, I introduce a framework for categorizing causal questions, highlighting common challenges in product analytics, and emphasizing the need for discovering new causes that drive outcomes. I will present a process for generating hypotheses about causal relationships that are likely to lead to successful ideas for product improvements that can be validated through experiments. The key methodological insight is to model event data before they are aggregated, which helps us isolate causal relationships between events and allows for bias reduction to be automated under certain assumptions.
 	- [Sean Taylor](https://seanjtaylor.com/) is a data scientist, social scientist, statistician, and software developer. He mostly specializes in methods for solving causal inference and business decision problems, and is particularly interested in building tools for practitioners working on real-world problems. He is a co-founder and chief scientist at [Motif](https://www.motifanalytics.com/).
 - Friday 11 October 2024, noon (EDT)
   - **Rona Fang-Yu Hu**, University of Michigan
