--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -64,14 +64,15 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
   - "Predicting the Unobserved: Integrating 'Something Else' Sexual Identity Responses in Health Disparity Studies Using Machine Learning and Resampling Techniques"
   - Rona Hu is a second-year Master’s student in the Michigan Program in Survey and Data Science. She graduated from National Chengchi University with a B.S. in Psychology. Before coming to the United States for her graduate studies, she was a Research Associate and Chief Operating Officer at Quanthon Corporation in Taiwan. She has presented papers at the conference of the American Association of Public Opinion Research and the Joint Statistical Meetings since 2022.
 - Friday 18 October 2024, noon (EDT)
-	- **Xiaojun Su**, Unilever
-	- [Xiaojun Su](https://www.linkedin.com/in/xiaojunsu/) is a Machine Learning Lead, Horizon 3 Labs, Unilever where she leads cross-functional teams of data engineers, software developer, data scientists, postgraduate researchers, and 3rd party vendors to launch in-house models to drive significant ROIs. She holds a M.Sc from the University of Toronto.
+	- TBA
 - Friday 25 October 2024, noon (EDT)
 	- **Jay Alammar**, Cohere
 	- "Hands-On Large Language Models: Language Understanding and Generation"
 	- [Jay Alammar](https://jalammar.github.io) is Director and Engineering Fellow at Cohere (pioneering provider of large language models as an API). In this role, he advises and educates enterprises and the developer community on using language models for practical use cases. 
 - Friday 1 November 2024, noon (EDT)
-	- TBA
+	- **Xiaojun Su**, Unilever
+	- "Unlocking Business Value through Machine Learning Innovation"
+	- [Xiaojun Su](https://www.linkedin.com/in/xiaojunsu/) is a Machine Learning Lead, Horizon 3 Labs, Unilever where she leads cross-functional teams of data engineers, software developer, data scientists, postgraduate researchers, and 3rd party vendors to launch in-house models to drive significant ROIs. She holds a M.Sc from the University of Toronto.
 - Friday 8 November 2024, noon (EST)
 	- **Jacob Baldwin**, Pro Football Focus	(PFF)
 	- [Jacob Baldwin](https://www.linkedin.com/in/jacob-baldwin-51849b106/) is a Senior Data Scientist at PFF. He holds an online M.S. degree in Applied Mathematics from the University of Washington, and graduated from Clarkson University with a B.S. in Physics, a B.S. in Applied Mathematics, and a minor in Computer Science.
