--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -49,11 +49,6 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Upcoming
 
-- Friday 27 September 2024, noon (EDT)
-	- **Annie Collins**, GivingTuesday
-	- "Leveraging Data for Generosity: GivingPulse and the GivingTuesday Data Commons"
-	- The American non-profit sector faces significant challenges in fully understanding the complex landscape in which it operates, particularly when it comes to accessing reliable data on individual giving in the U.S. At the same time, there is increasing interest in gaining a more comprehensive view of the generosity ecosystem—one that encompasses not only monetary donations to formal non-profits but also volunteerism, in-kind contributions, advocacy, and peer-to-peer giving. To this end, this presentation will explore the objectives of the GivingTuesday Data Commons, its core features, and potential use cases. Additionally, it will introduce the GivingPulse project, an ongoing weekly survey that tracks a broad spectrum of individual giving behaviours and related attitudes.
-	- [Annie Collins](https://www.linkedin.com/in/annie-a-collins/) is a Data Scientist at GivingTuesday, a US-based nonprofit focused on researching generosity and charitable giving behaviours. Beyond GivingTuesday, Annie has spent several years in data management and research roles within the Canadian nonprofit sector. She holds a Bachelors of Science in applied mathematics and statistics from the University of Toronto, and uses her experience to provide data for the public good and support a more data-driven social sector worldwide.
 - Friday 4 October 2024, noon (EDT)
 	- **Sean Taylor**, Motif
 	- "Casual Discovery for Product Analytics"
@@ -91,6 +86,11 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Past
 
+- Friday 27 September 2024, noon (EDT)
+	- **Annie Collins**, GivingTuesday
+	- ["Leveraging Data for Generosity: GivingPulse and the GivingTuesday Data Commons"](https://youtu.be/8yxVJ240xK0)
+	- The American non-profit sector faces significant challenges in fully understanding the complex landscape in which it operates, particularly when it comes to accessing reliable data on individual giving in the U.S. At the same time, there is increasing interest in gaining a more comprehensive view of the generosity ecosystem—one that encompasses not only monetary donations to formal non-profits but also volunteerism, in-kind contributions, advocacy, and peer-to-peer giving. To this end, this presentation will explore the objectives of the GivingTuesday Data Commons, its core features, and potential use cases. Additionally, it will introduce the GivingPulse project, an ongoing weekly survey that tracks a broad spectrum of individual giving behaviours and related attitudes.
+	- [Annie Collins](https://www.linkedin.com/in/annie-a-collins/) is a Data Scientist at GivingTuesday, a US-based nonprofit focused on researching generosity and charitable giving behaviours. Beyond GivingTuesday, Annie has spent several years in data management and research roles within the Canadian nonprofit sector. She holds a Bachelors of Science in applied mathematics and statistics from the University of Toronto, and uses her experience to provide data for the public good and support a more data-driven social sector worldwide.
 - Friday 20 September 2024, noon (EDT)
 	- **Sana Shams**, University of British Columbia
 	- **Waris Bhatia**, University of British Columbia
