--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -49,9 +49,6 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Upcoming
 
-- Friday 8 November 2024, noon (EST)
-	- **Jacob Baldwin**, Pro Football Focus	(PFF)
-	- [Jacob Baldwin](https://www.linkedin.com/in/jacob-baldwin-51849b106/) is a Senior Data Scientist at PFF. He holds an online M.S. degree in Applied Mathematics from the University of Washington, and graduated from Clarkson University with a B.S. in Physics, a B.S. in Applied Mathematics, and a minor in Computer Science.
 - Wednesday 13 November 2024, noon (EST)
 	- **Sayash Kapoor**, Princeton
 	- "CORE-Bench and other AI agent use cases"
@@ -67,6 +64,10 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Past
 
+- Friday 8 November 2024, noon (EST)
+	- **Jacob Baldwin**, Pro Football Focus	(PFF)
+  - "[Pass Coverage Metrics in the NFL](https://youtu.be/-fQehSo-sGI)"
+	- [Jacob Baldwin](https://www.linkedin.com/in/jacob-baldwin-51849b106/) is a Senior Data Scientist at PFF. He holds an online M.S. degree in Applied Mathematics from the University of Washington, and graduated from Clarkson University with a B.S. in Physics, a B.S. in Applied Mathematics, and a minor in Computer Science.
 - Friday 1 November 2024, noon (EDT)
 	- **Xiaojun Su**, Unilever
 	- "Unlocking Business Value through Machine Learning Innovation"
