--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -49,9 +49,6 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Upcoming
 
-- Friday 22 November 2024, noon (EST)
-	- **Yiqin Fu**, Stanford University
-	- Born and raised in China, [Yiqin](https://yiqinfu.github.io/) Fu spent many of her formative years in the U.S. and the U.K. Yiqin (pronounced ee-ching) is studying towards a Ph.D. in political science at Stanford University, after having worked as a research associate at Yale Law School's Paul Tsai China Center in New Haven, Connecticut and Beijing, China. She holds a B.A. in Philosophy, Politics, and Economics from the University of Oxford and is broadly interested in innovation, U.S.-China relations, and comparative political and electoral systems.
 - Friday 29 November 2024, noon (EST)
 	- **Caroline Weis**, gsk.ai
 	- [Caroline Weis](https://cvweis.github.io/) is a Senior AI/ML Engineer and team lead at gsk.ai. In 2021, she completed her PhD in Machine Learning for Computational Biology and Healthcare at ETH Zurich. Her research interests lie in the development of personalized healthcare through data analysis and machine learning on medical and biological data.
@@ -60,14 +57,18 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Past
 
+- Friday 22 November 2024, noon (EST)
+	- **Yiqin Fu**, Stanford University
+	- "Understanding Chinese Industrial Policy Through Government Investments and Patents"
+	- Born and raised in China, [Yiqin](https://yiqinfu.github.io/) Fu spent many of her formative years in the U.S. and the U.K. Yiqin (pronounced ee-ching) is studying towards a Ph.D. in political science at Stanford University, after having worked as a research associate at Yale Law School's Paul Tsai China Center in New Haven, Connecticut and Beijing, China. She holds a B.A. in Philosophy, Politics, and Economics from the University of Oxford and is broadly interested in innovation, U.S.-China relations, and comparative political and electoral systems.
 - Wednesday 13 November 2024, noon (EST)
 	- **Sayash Kapoor**, Princeton
 	- "[Five surprises in evaluating AI agents](https://youtu.be/rokTPN4w51c)"
   - [Sayash Kapoor](https://www.cs.princeton.edu/~sayashk/#) is a computer science Ph.D. candidate at Princeton University's Center for Information Technology Policy. His research focuses on the societal impact of AI. He has previously worked on AI in industry and academia, including Facebook, Columbia University, and EPFL Switzerland. He received a best paper award at ACM FAccT, an impact recognition award at ACM CSCW, and was included in TIME's inaugural list of the 100 most influential people in AI. His recently released book with Arvind Narayanan, [AI Snake Oil](https://www.aisnakeoil.com/), looks critically at what AI can and cannot do.
 - Friday 8 November 2024, noon (EST)
 	- **Jacob Baldwin**, Pro Football Focus	(PFF)
-  - "[Pass Coverage Metrics in the NFL](https://youtu.be/-fQehSo-sGI)"
-	- [Jacob Baldwin](https://www.linkedin.com/in/jacob-baldwin-51849b106/) is a Senior Data Scientist at PFF. He holds an online M.S. degree in Applied Mathematics from the University of Washington, and graduated from Clarkson University with a B.S. in Physics, a B.S. in Applied Mathematics, and a minor in Computer Science.
+	- "[Pass Coverage Metrics in the NFL](https://youtu.be/-fQehSo-sGI)"
+  - [Jacob Baldwin](https://www.linkedin.com/in/jacob-baldwin-51849b106/) is a Senior Data Scientist at PFF. He holds an online M.S. degree in Applied Mathematics from the University of Washington, and graduated from Clarkson University with a B.S. in Physics, a B.S. in Applied Mathematics, and a minor in Computer Science.
 - Friday 1 November 2024, noon (EDT)
 	- **Xiaojun Su**, Unilever
 	- "Unlocking Business Value through Machine Learning Innovation"
