Update cv and recs

--- a/recs.qmd
+++ b/recs.qmd
@@ -39,10 +39,15 @@ title: "Recommendations"
 - California Sandwiches - 244 Claremont St.
 - [Good Egg](https://goodegg.ca)---a book shop in Kensington Market that is focused on kitchen books. It sounds niche, and it is, but it's also great. (HT: Ryan Briggs)
 - Vietnam Lovely Noodle - 378 Bloor St W.
-- [Cà Phê Rang](https://capherang.ca) - 147 Spadina Ave.
 - [Evangeline Toronto](https://www.evangelinetoronto.com) - 51 Camden St
   - This is a bar on Level 14 of the Ace Hotel. Go early on a nice evening and try for the outside table around the corner for a great view.
-- [Gift Shop Cocktail Bar](https://www.barberandco.com/gift-shop/) - 89-B Ossington Ave.
-  - Look for the barber shop - knock, then wait and hope you're let in. (This may sound weird, but it's great.) Go early (they open at 7pm) because it's a small space and fill up quickly. The menu is epic.
 - Tap Phong -  360 Spadina Ave - in Chinatown provides an incredible selection of kitchen supplies at decent prices. Again, sounds weird, but it's a Toronto institution.
   
+
+## UK
+
+**Oxford**
+
+- You can get inexpensive access to the Bodleian Libraries with a 'Reader' [application](https://www.bodleian.ox.ac.uk/join-the-libraries/apply).
+
+
